# TransferQueue

./: PR_MESSAGE.md  README.md  analysis_result.md  bench-0.15-new.json  bench-0.15.json  benchmark_tq_custom.py  draw_benchmark_comparison.py  draw_benchmark_result.py  final_benchmark_summary_20260109_03.json  make_package.py  mm_profile.py  performance_test-tq.py  performance_test.py  put_benchmark.py  put_benchmark2.py  pyproject.toml  requirements.txt  run_profile.sh  td_vs_tq_analysis.md  td_vs_tq_analysis_v2_comparison_driven.md  tensordock_vs_transferqueue_analysis.md  tq_benchmark_in_docker.py  tq_data_flow_analysis.md  zero_copy_analysis_zh.md  zmq_utils.py
docs/: tensor_compression_design.md
docs/plans/: 2026-04-18-tq-performance-quantification.md  2026-04-21-tq-new-dict-storage-backend.md
docs/plans/tensor_compression/: 00_overview.md  01_compression_util.md  02_serial_utils.md  05_tests.md  (+2 more)
recipe/simple_use_case/: single_controller_demo.py
scripts/: analyze_replay.py  perf_microbench.py  performance_test.py  put_benchmark.py  tq_perf_quantification.py
scripts/performance_test/: draw_figure.py  perftest_config.yaml  run_compression_compare.sh  run_perf_test.sh
td/: tq_client.py  tq_mgr.py
tests/: put_benchmark.py  test_async_simple_storage_manager.py  test_client.py  test_compression.py  test_controller.py  test_controller_data_partitions.py  test_kv_storage_manager.py  test_metadata.py  test_perf_compare.py  test_perf_microbench.py  test_perf_report.py  test_put_benchmark2.py  test_ray_p2p.py  test_replay_analysis.py  test_replay_recorder.py  test_serial_utils_on_cpu.py  test_server_bundle.py  test_simple_storage_unit.py  test_storage_client_factory.py  test_tensor_utils.py  test_tq_new_ablation.py  test_tq_new_shared_columns.py  test_trace_utils.py
tests/e2e/: test_e2e_lifecycle_consistency.py  test_kv_interface_e2e.py
tq_benchmark_package/: Dockerfile  README.md  benchmark_summary.json  run_benchmark.py  run_profiling.py
tq_benchmark_package/src_columnar_batch_meta/: pyproject.toml  res.json
tq_benchmark_package/src_columnar_field_schema/: res.json
tq_benchmark_package/src_main/: pyproject.toml  requirements.txt
tq_benchmark_package/src_main/.github/workflows/: pre-commit.yml  python-package.yml
tq_benchmark_package/src_main/scripts/: put_benchmark.py
tq_benchmark_package/src_optimized/: .gitignore  .pre-commit-config.yaml  README.md  container_profiler.py  put_benchmark.py  pyproject.toml  res.json
tq_benchmark_package/src_pre_refactor/: res.json
tq_benchmark_package/src_td/: metrics.py  put_benchmark.py  res.json  seqlen_balancing.py  tq_data.py  tq_sampler.py  tq_structures.py  tq_utils.py
tq_benchmark_package/src_zero_copy_default/: requirements.txt
transfer_queue/: client.py  config.yaml  controller.py  interface.py  metadata.py
transfer_queue/dataloader/: streaming_dataloader.py  streaming_dataset.py
transfer_queue/sampler/: base.py
transfer_queue/storage/: __init__.py  simple_backend-0.13.py  simple_backend.py  simple_backend_v2.py  simple_storage.py
transfer_queue/utils/: common.py  compression.py  enum_utils.py  logging_utils.py  perf_compare.py  perf_microbench.py  perf_report.py  perf_utils.py  replay_recorder.py  serial_utils.py  tensor_utils.py  trace_utils.py  yuanrong_utils.py  zmq_utils-0.13.py  zmq_utils.py
tutorial/: 01_core_components.py
(+119 files in other folders)
